--- a/nephelo-center/src/main/resources/application.yml
+++ b/nephelo-center/src/main/resources/application.yml
@@ -1,13 +1,13 @@
 spring:
     application:
-        name: fcat-center
+        name: nephelo-center
 
 server:
-    port: 8961
+    port: 8962
 
 eureka:
     client:
-        registerWithEureka: true
+        registerWithEureka: false
         fetchRegistry: false
         serviceUrl:
           defaultZone: http://localhost:${server.port}/eureka/
