--- a/nephelo-user/pom.xml
+++ b/nephelo-user/pom.xml
@@ -43,6 +43,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+            <version>1.0.31</version>
+            <scope>test</scope>
+		</dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.46</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
