--- a/nephelo-user/src/main/resources/application.yml
+++ b/nephelo-user/src/main/resources/application.yml
@@ -13,3 +13,9 @@ eureka:
 spring:
   application:
       name: nephelo-user
+
+jdbc:
+  driver: jdbc:mysql://localhost:3306/fcat?useUnicode=true&characterEncoding=UTF8
+  url:
+  username:
+  password:
