--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 hs_err_pid*
 
 .gitignore
+.idea
 .idea/libraries/Maven__com_googlecode_javaewah_JavaEWAH_1_1_6.xml
 .idea/libraries/Maven__com_jcraft_jsch_0_1_54.xml
 .idea/libraries/Maven__com_jcraft_jzlib_1_1_1.xml
