--- a/nephelo-common/pom.xml
+++ b/nephelo-common/pom.xml
@@ -7,9 +7,20 @@
         <groupId>com.nephelo</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <artifactId>nephelo-common</artifactId>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>nephelo-common</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+    </dependencies>
 
 </project>
