--- a/nephelo-user/src/main/resources/application.yml
+++ b/nephelo-user/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
     database: 0
     host: localhost
     port: 6379
-    password: 123456
+    password:
     timeout: 60 # 数据库连接超时时间，2.0 中该参数的类型为Duration，这里在配置的时候需要指明单位
     # 连接池配置，2.0中直接使用jedis或者lettuce配置连接池
     jedis:
