--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>nephelo-center</module>
         <module>nephelo-user</module>
         <module>nephelo-oss</module>
+        <module>nephelo-api</module>
     </modules>
 
 
