--- a/nephelo-api/pom.xml
+++ b/nephelo-api/pom.xml
@@ -26,6 +26,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+            <version>2.0.3.RELEASE</version>
         </dependency>
     </dependencies>
 
