--- a/nephelo-user/src/main/resources/application.yml
+++ b/nephelo-user/src/main/resources/application.yml
@@ -1,59 +1,3 @@
-#spring:
-#  profiles:
-#    active: dev
-
-server:
-  port: 8968
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8962/eureka/
-
 spring:
-  application:
-    name: nephelo-user
-  datasource:
-    name: nephelo-datasource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nephelo?useUnicode=true&characterEncoding=UTF8
-    type: com.alibaba.druid.pool.DruidDataSource
-    username: root
-    password: yanlin@123
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-  redis:
-    database: 0
-    host: localhost
-    port: 6379
-    password:
-    timeout: 60 # 数据库连接超时时间，2.0 中该参数的类型为Duration，这里在配置的时候需要指明单位
-    # 连接池配置，2.0中直接使用jedis或者lettuce配置连接池
-    jedis:
-      pool:
-        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
-        min-idle: 0
-        max-idle: 0 # 连接池中的最大空闲连接
-        max-wait: -1 #连接池最大阻塞等待时间（使用负值表示没有限制）
-
-
-
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 30000 #缺省为1000
-
+  profiles:
+    active: dev
