--- a/nephelo-user/src/main/resources/application-dev.yml
+++ b/nephelo-user/src/main/resources/application-dev.yml
@@ -1,53 +1,88 @@
-#spring:
-#  profiles:
-#    active: dev
+spring:
+  application:
+    name: nephelo-user
+  datasource:
+    name: nephelo-datasrouce
+    url: jdbc:mysql://localhost/nephelo?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: yanlin@123
+    type: com.alibaba.druid.pool.DruidDataSource
+    # jdbc-connector6之后名字变成下面这个
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙,防止sql注入
+    filters: stat,wall,log4j
+    maxActive: 20
+    initialSize: 1
+    minIdle: 1
+    # 配置获取连接等待超时的时间
+    maxWait: 60000
+    # 配置间隔多久才进行一次检测，检测需要关闭的空闲连接，单位是毫秒
+    timeBetweenEvictionRunsMillis: 60000
+    # 配置一个连接在池中最小生存的时间，单位是毫秒
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: true
+    maxOpenPreparedStatements: 20
+    logSlowSql: true
+    #durid登陆账号密码
+    loginUsername: admin
+    loginPassword: admin
+  redis:
+    host: localhost
+    # Redis数据库索引（默认为0）
+    database: 0
+    # 连接超时时间（毫秒）
+    timeout: 1800
+    pool:
+      # 连接池最大连接数（使用负值表示没有限制）
+      max-active: 8
+      # 连接池中的最小空闲连接
+      min-idle: 0
+      # 连接池中的最大空闲连接
+      max-idle: 8
+      # 连接池最大阻塞等待时间（使用负值表示没有限制
+      max-wait: -1
+    # Redis服务器连接端口
+    port: 6379
+    password: 123456
+  mail:
+    host: smtp.qq.com
+    username: yanlin0802@qq.com
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: false
+            required: false
 
 server:
   port: 4002
+
+security:
+  user:
+    name: admin
+    password: admin
+    role: USER
+  basic:
+    enabled: false
+
+mybatis:
+  basepackage: com.nephelo.user.mapper
+  xmlLocation: classpath:mapper/**/*.xml
 
 eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:4001/eureka/
 
-spring:
-  application:
-    name: nephelo-user
-  datasource:
-    name: nephelo-datasource
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/nephelo?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false
-    type: com.alibaba.druid.pool.DruidDataSource
-    username: root
-    password: yanlin@123
-    filters: stat
-    maxActive: 20
-    initialSize: 1
-    maxWait: 60000
-    minIdle: 1
-    timeBetweenEvictionRunsMillis: 60000
-    minEvictableIdleTimeMillis: 300000
-    validationQuery: select 'x'
-    testWhileIdle: true
-    testOnBorrow: false
-    testOnReturn: false
-    poolPreparedStatements: true
-    maxOpenPreparedStatements: 20
-  #### redis
-  redis:
-    database: 0
-    host: localhost
-    port: 6379
-    password:
-    timeout: 60 # 数据库连接超时时间，2.0 中该参数的类型为Duration，这里在配置的时候需要指明单位
-    # 连接池配置，2.0中直接使用jedis或者lettuce配置连接池
-    jedis:
-      pool:
-        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
-        min-idle: 0
-        max-idle: 0 # 连接池中的最大空闲连接
-        max-wait: -1 #连接池最大阻塞等待时间（使用负值表示没有限制）
-
+management:
+  security:
+    enabled: false
 
 hystrix:
   command:
@@ -57,36 +92,16 @@ hystrix:
           thread:
             timeoutInMilliseconds: 30000 #缺省为1000
 
-# Mybatis 自身配置
-mybatis:
-  type-aliases-package: com.nephelo.user.bean
-  mapper-locations: classpath:mapper/*.xml
-  configuration:
-    map-underscore-to-camel-case: true # 驼峰命名规范开启
-
-mapper:
-  identity: MYSQL
-  mappers: tk.mybatis.mapper.common.BaseMapper
-  not-empty: true #设置 insert 和 update 中，是否判断字符串类型!=''
-  enum-as-simple-type: true # 枚举按简单类型处理
-
-# 如果想看到mybatis日志需要做如下配置
 logging:
   level:
-    com:
-      battch: debug
-
-######### 分页插件 ##########
-pagehelper:
-  helper-dialect: mysql
-  pagehelper:
-    params: count=countSql
-    pagehelper.reasonable: false
-    pagehelper.support-methods-arguments: true
+    tk.mybatis: DEBUG
+    com.nephelo.user: DEBUG
+  config: classpath:logback.xml
+  path: /nephelo/user
 
 swagger:
-  basepackage: com.xfdmao.fcat.coin.controller
+  basepackage: com.nephelo.user.controller
   service:
-    name: fcat-coin
-    description: fcat-coin后端服务接口
+    name: nephelo-user
+    description: nephelo-user后端服务接口
     developer: F1
