--- a/nephelo-gate/src/main/resources/application-dev.yml
+++ b/nephelo-gate/src/main/resources/application-dev.yml
@@ -52,7 +52,8 @@ security:
     user:
         name: admin
         password: admin
-        role: USER
+        role:
+        - USER
     basic:
       enabled: false
 
