--- a/nephelo-common/pom.xml
+++ b/nephelo-common/pom.xml
@@ -170,5 +170,17 @@
             <artifactId>spring-data-redis</artifactId>
             <version>1.8.9.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>16.0.2</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>16.0.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
