默认更改列表

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <module>taotao</module>
         <module>nephelo-gate</module>
         <module>nephelo-spring</module>
+        <module>nephelo-study</module>
+        <module>nephelo-mybatis</module>
     </modules>
 
     <developers>
