默认更改列表

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>nephelo-center</module>
         <module>nephelo-user</module>
         <module>nephelo-oss</module>
+        <module>nephelo-dhx</module>
         <module>nephelo-api</module>
         <module>nephelo-springmvc</module>
         <module>taotao</module>
