默认更改列表

--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,10 @@
         <module>nephelo-springmvc</module>
         <module>taotao</module>
         <module>nephelo-gate</module>
-        <module>nephelo-spring</module>
         <module>nephelo-study</module>
         <module>nephelo-mybatis</module>
+        <module>nephelo-myssm</module>
+        <module>nephelo-newssm</module>
     </modules>
 
     <developers>
